为开发文件列表做前期工作 1、去除了扫描前弹窗申请授权 2、开发文件列表的TopBar 3、开发文件列表的拖拽抽屉

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="scanning">扫描中，请勿关闭应用</string>
     <string name="scan_success">扫描完成</string>
     <string name="scan_failed">扫描失败</string>
+    <string name="local_file">本地文件</string>
+    <string name="local_cloud_file">本地网络文件</string>
+    <string name="add_local_cloud">添加本地网络</string>
     <string name="yes">确定</string>
     <string name="no">取消</string>
 </resources>
