开发smb文件列表
待完成
维护表中数据的有效性
空闲时生成缩略图
点击图片显示大图的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="add_local_cloud">添加本地网络</string>
     <string name="yes">确定</string>
     <string name="no">取消</string>
+    <string name="ip">IP</string>
+    <string name="ip_input">共享设备的IP(必填)</string>
+    <string name="user">账户</string>
+    <string name="user_input">共享设备的登录账户(必填)</string>
+    <string name="pwd">密码</string>
+    <string name="pwd_input">账户未设密码可不填(选填)</string>
+    <string name="shared">共享目录</string>
+    <string name="shared_input">共享目录(必填)</string>
 </resources>
