开发smb文件列表
待完成
维护表中数据的有效性
空闲时生成缩略图
点击图片显示大图的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <string name="pwd_input">账户未设密码可不填(选填)</string>
     <string name="shared">共享目录</string>
     <string name="shared_input">共享目录(必填)</string>
+    <string name="connecting">尝试连接连接中</string>
+    <string name="submit">提交</string>
+    <string name="connect_success">连接成功</string>
+    <string name="connect_failed_ip_error">连接失败,请检查IP是否正确</string>
+    <string name="connect_failed_user_error">连接失败,请检查账户密码是否正确</string>
+    <string name="connect_failed_shared_error">连接失败,请检查共享目录是否正确</string>
 </resources>
