明日任务:完成收藏页面
全部任务:解决查看smb图片时加载时回退卡顿  完成设置页面 展示照片元信息

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="connect_failed_shared_error">连接失败,请检查共享目录是否正确</string>
     <string name="database_error">连接数据损坏请重新添加</string>
     <string name="local_net_offline">本地网络离线，请检查网络环境</string>
+    <string name="check_all">全选</string>
+    <string name="check_num">已选中%1$s个</string>
 </resources>
