明日任务:完成收藏页面
全部任务:解决查看smb图片时加载时回退卡顿  完成设置页面 展示照片元信息

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,10 @@
     <string name="local_net_offline">本地网络离线，请检查网络环境</string>
     <string name="check_all">全选</string>
     <string name="check_num">已选中%1$s个</string>
-    <string name="top_bar_add_favorite">收藏</string>
+    <string name="top_bar_add_grouping">收藏</string>
     <string name="top_bar_directory_info">%1$s个目录 %2$s张图片</string>
+    <string name="top_bar_directory_info_2">%1$s个%2$s %3$s张图片</string>
+    <string name="popup_add_grouping">新建分组</string>
+    <string name="popup_select_grouping">选择分组</string>
+    <string name="grouping">分组%1$s</string>
 </resources>
